--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -8,7 +8,6 @@
 name: PR Changelogs
 concurrency: commit_action
 on:
-  workflow_dispatch: #TODO: Remove; for testing only.
   pull_request_target:
     types: [closed]
 
@@ -19,7 +18,7 @@ env:
 
 jobs:
   changelog:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     if: github.event.pull_request.merged == true
     permissions:
       contents: write
