--- a/Resources/Changelog/CybersunChangelog.yml
+++ b/Resources/Changelog/CybersunChangelog.yml
@@ -1,3 +1,9 @@
 Name: CybersunLog
 Order: -1
 Entries:
+- author: Nymos
+  changes:
+    - type: Add
+      message: Bugs
+  id: 1
+  time: '1984-06-15T12:54:44.0000000+00:00'
