--- a/.github/workflows/publish-discord.yml
+++ b/.github/workflows/publish-discord.yml
@@ -15,6 +15,8 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
+    - name: Install dependencies
+      run: sudo apt-get install -y python3-paramiko python3-lxml
     - uses: actions/checkout@v3.6.0
     - name: Publish changelog (Discord)
       run: Tools/actions_changelogs_since_last_run.py
