Hide clown and mime replicant's stuff in spawn menu
Hide clown and mime replicant's stuff in spawn menu

--- a/Resources/Prototypes/_Radium/Entities/Clothing/Uniforms/unremoveable-jumpskirts.yml
+++ b/Resources/Prototypes/_Radium/Entities/Clothing/Uniforms/unremoveable-jumpskirts.yml
@@ -1,5 +1,12 @@
-﻿- type: entity
+# SPDX-FileCopyrightText: 2025 CybersunBot <cybersunbot@proton.me>
+# SPDX-FileCopyrightText: 2025 Mnwa282 <167712034+Mnwa282@users.noreply.github.com>
+# SPDX-FileCopyrightText: 2025 freeze2222 <46649391+freeze2222@users.noreply.github.com>
+#
+# SPDX-License-Identifier: AGPL-3.0-or-later
+
+- type: entity
   parent: ClothingUniformJumpskirtMime
   id: UnremoveableClothingUniformJumpskirtMime
+  categories: [ HideSpawnMenu ]
   components:
   - type: Unremoveable
