--- a/Resources/Prototypes/_Goobstation/Entities/Objects/Specific/Christmas/tinsel.yml
+++ b/Resources/Prototypes/_Goobstation/Entities/Objects/Specific/Christmas/tinsel.yml
@@ -7,6 +7,9 @@
 # SPDX-FileCopyrightText: 2024 Spessmann <156740760+Spessmann@users.noreply.github.com>
 # SPDX-FileCopyrightText: 2024 Ubaser <134914314+UbaserB@users.noreply.github.com>
 # SPDX-FileCopyrightText: 2025 Aiden <28298836+Aidenkrz@users.noreply.github.com>
+# SPDX-FileCopyrightText: 2025 CybersunBot <cybersunbot@proton.me>
+# SPDX-FileCopyrightText: 2025 Ilysha998 <sukhachew.ilya@gmail.com>
+# SPDX-FileCopyrightText: 2025 SX-7 <sn1.test.preria.2002@gmail.com>
 #
 # SPDX-License-Identifier: AGPL-3.0-or-later
 # I couldn't figure out how randomsprite works so this mess was created!!!
@@ -72,6 +75,7 @@
     - ChristmasTinselBlue6
 
 - type: entity
+  categories: [ HideSpawnMenu ]
   id: ChristmasTinselWhite1
   description: Some white tinsel. It's a bit sparkly.
   components:
@@ -87,6 +91,7 @@
     mask: /Textures/Effects/LightMasks/sparklemask.png
 
 - type: entity
+  categories: [ HideSpawnMenu ]
   id: ChristmasTinselWhite2
   description: Some white tinsel. It's a bit sparkly.
   components:
@@ -102,6 +107,7 @@
     mask: /Textures/Effects/LightMasks/sparklemask.png
 
 - type: entity
+  categories: [ HideSpawnMenu ]
   id: ChristmasTinselWhite3
   description: Some white tinsel. It's a bit sparkly.
   components:
@@ -117,6 +123,7 @@
     mask: /Textures/Effects/LightMasks/sparklemask.png
 
 - type: entity
+  categories: [ HideSpawnMenu ]
   id: ChristmasTinselWhite4
   description: Some white tinsel. It's a bit sparkly.
   components:
@@ -132,6 +139,7 @@
     mask: /Textures/Effects/LightMasks/sparklemask.png
 
 - type: entity
+  categories: [ HideSpawnMenu ]
   id: ChristmasTinselWhite5
   description: Some white tinsel. It's a bit sparkly.
   components:
@@ -147,6 +155,7 @@
     mask: /Textures/Effects/LightMasks/sparklemask.png
 
 - type: entity
+  categories: [ HideSpawnMenu ]
   id: ChristmasTinselWhite6
   description: Some white tinsel. It's a bit sparkly.
   components:
@@ -162,6 +171,7 @@
     mask: /Textures/Effects/LightMasks/sparklemask.png
 
 - type: entity
+  categories: [ HideSpawnMenu ]
   id: ChristmasTinselRed1
   description: Some red tinsel. It's a bit sparkly.
   components:
@@ -178,6 +188,7 @@
     mask: /Textures/Effects/LightMasks/sparklemask.png
 
 - type: entity
+  categories: [ HideSpawnMenu ]
   id: ChristmasTinselRed2
   description: Some red tinsel. It's a bit sparkly.
   components:
@@ -194,6 +205,7 @@
     mask: /Textures/Effects/LightMasks/sparklemask.png
 
 - type: entity
+  categories: [ HideSpawnMenu ]
   id: ChristmasTinselRed3
   description: Some red tinsel. It's a bit sparkly.
   components:
@@ -210,6 +222,7 @@
     mask: /Textures/Effects/LightMasks/sparklemask.png
 
 - type: entity
+  categories: [ HideSpawnMenu ]
   id: ChristmasTinselRed4
   description: Some red tinsel. It's a bit sparkly.
   components:
@@ -226,6 +239,7 @@
     mask: /Textures/Effects/LightMasks/sparklemask.png
 
 - type: entity
+  categories: [ HideSpawnMenu ]
   id: ChristmasTinselRed5
   description: Some red tinsel. It's a bit sparkly.
   components:
@@ -242,6 +256,7 @@
     mask: /Textures/Effects/LightMasks/sparklemask.png
 
 - type: entity
+  categories: [ HideSpawnMenu ]
   id: ChristmasTinselRed6
   description: Some red tinsel. It's a bit sparkly.
   components:
@@ -258,6 +273,7 @@
     mask: /Textures/Effects/LightMasks/sparklemask.png
 
 - type: entity
+  categories: [ HideSpawnMenu ]
   id: ChristmasTinselBlue1
   description: Some blue tinsel. It's a bit sparkly.
   components:
@@ -274,6 +290,7 @@
     mask: /Textures/Effects/LightMasks/sparklemask.png
 
 - type: entity
+  categories: [ HideSpawnMenu ]
   id: ChristmasTinselBlue2
   description: Some blue tinsel. It's a bit sparkly.
   components:
@@ -290,6 +307,7 @@
     mask: /Textures/Effects/LightMasks/sparklemask.png
 
 - type: entity
+  categories: [ HideSpawnMenu ]
   id: ChristmasTinselBlue3
   description: Some blue tinsel. It's a bit sparkly.
   components:
@@ -306,6 +324,7 @@
     mask: /Textures/Effects/LightMasks/sparklemask.png
 
 - type: entity
+  categories: [ HideSpawnMenu ]
   id: ChristmasTinselBlue4
   description: Some blue tinsel. It's a bit sparkly.
   components:
@@ -322,6 +341,7 @@
     mask: /Textures/Effects/LightMasks/sparklemask.png
 
 - type: entity
+  categories: [ HideSpawnMenu ]
   id: ChristmasTinselBlue5
   description: Some blue tinsel. It's a bit sparkly.
   components:
@@ -338,6 +358,7 @@
     mask: /Textures/Effects/LightMasks/sparklemask.png
 
 - type: entity
+  categories: [ HideSpawnMenu ]
   id: ChristmasTinselBlue6
   description: Some blue tinsel. It's a bit sparkly.
   components:
