--- a/Resources/Prototypes/Accents/word_replacements.yml
+++ b/Resources/Prototypes/Accents/word_replacements.yml
@@ -88,9 +88,13 @@
 # SPDX-FileCopyrightText: 2024 tosatur <63034378+tosatur@users.noreply.github.com>
 # SPDX-FileCopyrightText: 2024 voidnull000 <18663194+voidnull000@users.noreply.github.com>
 # SPDX-FileCopyrightText: 2025 Aiden <28298836+Aidenkrz@users.noreply.github.com>
+# SPDX-FileCopyrightText: 2025 CybersunBot <cybersunbot@proton.me>
 # SPDX-FileCopyrightText: 2025 GoobBot <uristmchands@proton.me>
+# SPDX-FileCopyrightText: 2025 Ilysha998 <sukhachew.ilya@gmail.com>
 # SPDX-FileCopyrightText: 2025 ImWeax <59857479+ImWeax@users.noreply.github.com>
+# SPDX-FileCopyrightText: 2025 Nymos <46649391+NotSoNymos@users.noreply.github.com>
 # SPDX-FileCopyrightText: 2025 TurboTracker <130304754+TurboTrackerss14@users.noreply.github.com>
+# SPDX-FileCopyrightText: 2025 Weax <59857479+ImWeax@users.noreply.github.com>
 #
 # SPDX-License-Identifier: AGPL-3.0-or-later
 # Accents that work off of word replacements.
@@ -475,80 +479,142 @@
 # For the chat sanitization system
 - type: accent
   id: chatsanitize
+# Radium start: chatsan.
   wordReplacements:
-    chatsan-word-1: chatsan-replacement-1
-    chatsan-word-2: chatsan-replacement-2
-    chatsan-word-3: chatsan-replacement-3
-    chatsan-word-4: chatsan-replacement-4
-    chatsan-word-5: chatsan-replacement-5
-    chatsan-word-6: chatsan-replacement-6
-    chatsan-word-7: chatsan-replacement-7
-    chatsan-word-8: chatsan-replacement-8
-    chatsan-word-9: chatsan-replacement-9
-    chatsan-word-10: chatsan-replacement-10
-    chatsan-word-11: chatsan-replacement-11
-    chatsan-word-12: chatsan-replacement-12
-    chatsan-word-13: chatsan-replacement-13
-    chatsan-word-14: chatsan-replacement-14
-    chatsan-word-15: chatsan-replacement-15
-    chatsan-word-16: chatsan-replacement-16
-    chatsan-word-17: chatsan-replacement-17
-    chatsan-word-18: chatsan-replacement-18
-    chatsan-word-19: chatsan-replacement-19
-    chatsan-word-20: chatsan-replacement-20
-    chatsan-word-21: chatsan-replacement-please
-    chatsan-word-22: chatsan-replacement-please
-    chatsan-word-23: chatsan-replacement-please
-    chatsan-word-24: chatsan-replacement-24
-    chatsan-word-25: chatsan-replacement-25
-    chatsan-word-26: chatsan-replacement-26
-    chatsan-word-27: chatsan-replacement-27
-    chatsan-word-28: chatsan-replacement-28
-    chatsan-word-29: chatsan-replacement-29
-    chatsan-word-30: chatsan-replacement-30
-    chatsan-word-31: chatsan-replacement-31
-    chatsan-word-32: chatsan-replacement-32
-    chatsan-word-33: chatsan-replacement-33
-    chatsan-word-34: chatsan-replacement-34
-    chatsan-word-35: chatsan-replacement-35
-    chatsan-word-36: chatsan-replacement-36
-    chatsan-word-37: chatsan-replacement-37
-    chatsan-word-38: chatsan-replacement-38
-    chatsan-word-39: chatsan-replacement-etcetera
-    chatsan-word-40: chatsan-replacement-etcetera
-    chatsan-word-41: chatsan-replacement-41
-    chatsan-word-42: chatsan-replacement-42
-    chatsan-word-43: chatsan-replacement-43
-    chatsan-word-44: chatsan-replacement-44
-    chatsan-word-45: chatsan-replacement-45
-    chatsan-word-46: chatsan-replacement-46
-    chatsan-word-47: chatsan-replacement-47
-    chatsan-word-48: chatsan-replacement-48
-    chatsan-word-49: chatsan-replacement-49
-    chatsan-word-50: chatsan-replacement-50
-    chatsan-word-51: chatsan-replacement-51
-    chatsan-word-52: chatsan-replacement-52
-    chatsan-word-53: chatsan-replacement-53
-    chatsan-word-54: chatsan-replacement-54
-    chatsan-word-55: chatsan-replacement-55
-    chatsan-word-56: chatsan-replacement-56
-    chatsan-word-57: chatsan-replacement-57
-    chatsan-word-58: chatsan-replacement-58
-    chatsan-word-59: chatsan-replacement-59
-    chatsan-word-60: chatsan-replacement-60
-    chatsan-word-61: chatsan-replacement-61
-    chatsan-word-62: chatsan-replacement-62
-    chatsan-word-63: chatsan-replacement-63
-    chatsan-word-64: chatsan-replacement-64
-    chatsan-word-65: chatsan-replacement-65
-    chatsan-word-66: chatsan-replacement-66
-    chatsan-word-67: chatsan-replacement-67
-    # goob start
-    chatsan-word-68: chatsan-replacement-68
-    chatsan-word-69: chatsan-replacement-69
-    chatsan-word-70: chatsan-replacement-70
-    chatsan-word-71: chatsan-replacement-71
-    # goob end
+    radium-chatsan-word-1: radium-chatsan-replacement-1
+    radium-chatsan-word-2: radium-chatsan-replacement-2
+    radium-chatsan-word-3: radium-chatsan-replacement-3
+    radium-chatsan-word-4: radium-chatsan-replacement-4
+    radium-chatsan-word-5: radium-chatsan-replacement-5
+    radium-chatsan-word-6: radium-chatsan-replacement-6
+    radium-chatsan-word-7: radium-chatsan-replacement-7
+    radium-chatsan-word-8: radium-chatsan-replacement-8
+    radium-chatsan-word-9: radium-chatsan-replacement-9
+    radium-chatsan-word-10: radium-chatsan-replacement-10
+    radium-chatsan-word-11: radium-chatsan-replacement-11
+    radium-chatsan-word-12: radium-chatsan-replacement-12
+    radium-chatsan-word-13: radium-chatsan-replacement-13
+    radium-chatsan-word-14: radium-chatsan-replacement-14
+    radium-chatsan-word-15: radium-chatsan-replacement-15
+    radium-chatsan-word-16: radium-chatsan-replacement-16
+    radium-chatsan-word-17: radium-chatsan-replacement-17
+    radium-chatsan-word-18: radium-chatsan-replacement-18
+    radium-chatsan-word-19: radium-chatsan-replacement-19
+    radium-chatsan-word-20: radium-chatsan-replacement-20
+    radium-chatsan-word-21: radium-chatsan-replacement-21
+    radium-chatsan-word-22: radium-chatsan-replacement-22
+    radium-chatsan-word-23: radium-chatsan-replacement-23
+    radium-chatsan-word-24: radium-chatsan-replacement-24
+    radium-chatsan-word-25: radium-chatsan-replacement-25
+    radium-chatsan-word-26: radium-chatsan-replacement-26
+    radium-chatsan-word-27: radium-chatsan-replacement-27
+    radium-chatsan-word-28: radium-chatsan-replacement-28
+    radium-chatsan-word-29: radium-chatsan-replacement-29
+    radium-chatsan-word-30: radium-chatsan-replacement-30
+    radium-chatsan-word-31: radium-chatsan-replacement-31
+    radium-chatsan-word-32: radium-chatsan-replacement-32
+    radium-chatsan-word-33: radium-chatsan-replacement-33
+    radium-chatsan-word-34: radium-chatsan-replacement-34
+    radium-chatsan-word-35: radium-chatsan-replacement-35
+    radium-chatsan-word-36: radium-chatsan-replacement-36
+    radium-chatsan-word-37: radium-chatsan-replacement-37
+    radium-chatsan-word-38: radium-chatsan-replacement-38
+    radium-chatsan-word-39: radium-chatsan-replacement-39
+    radium-chatsan-word-40: radium-chatsan-replacement-40
+    radium-chatsan-word-41: radium-chatsan-replacement-41
+    radium-chatsan-word-42: radium-chatsan-replacement-42
+    radium-chatsan-word-43: radium-chatsan-replacement-43
+    radium-chatsan-word-44: radium-chatsan-replacement-44
+    radium-chatsan-word-45: radium-chatsan-replacement-45
+    radium-chatsan-word-46: radium-chatsan-replacement-46
+    radium-chatsan-word-47: radium-chatsan-replacement-47
+    radium-chatsan-word-48: radium-chatsan-replacement-48
+    radium-chatsan-word-49: radium-chatsan-replacement-49
+    radium-chatsan-word-50: radium-chatsan-replacement-50
+    radium-chatsan-word-51: radium-chatsan-replacement-51
+    radium-chatsan-word-52: radium-chatsan-replacement-52
+    radium-chatsan-word-53: radium-chatsan-replacement-53
+    radium-chatsan-word-54: radium-chatsan-replacement-54
+    radium-chatsan-word-55: radium-chatsan-replacement-55
+    radium-chatsan-word-56: radium-chatsan-replacement-56
+    radium-chatsan-word-57: radium-chatsan-replacement-57
+    radium-chatsan-word-58: radium-chatsan-replacement-58
+    radium-chatsan-word-59: radium-chatsan-replacement-59
+    radium-chatsan-word-60: radium-chatsan-replacement-60
+    radium-chatsan-word-61: radium-chatsan-replacement-61
+    radium-chatsan-word-62: radium-chatsan-replacement-62
+    radium-chatsan-word-63: radium-chatsan-replacement-63
+    radium-chatsan-word-64: radium-chatsan-replacement-64
+    radium-chatsan-word-65: radium-chatsan-replacement-65
+    radium-chatsan-word-66: radium-chatsan-replacement-66
+    radium-chatsan-word-67: radium-chatsan-replacement-67
+    radium-chatsan-word-68: radium-chatsan-replacement-68
+    radium-chatsan-word-69: radium-chatsan-replacement-69
+    radium-chatsan-word-70: radium-chatsan-replacement-70
+    radium-chatsan-word-71: radium-chatsan-replacement-71
+    radium-chatsan-word-72: radium-chatsan-replacement-72
+    radium-chatsan-word-73: radium-chatsan-replacement-73
+    radium-chatsan-word-74: radium-chatsan-replacement-74
+    radium-chatsan-word-75: radium-chatsan-replacement-75
+    radium-chatsan-word-76: radium-chatsan-replacement-76
+    radium-chatsan-word-77: radium-chatsan-replacement-77
+    radium-chatsan-word-78: radium-chatsan-replacement-78
+    radium-chatsan-word-79: radium-chatsan-replacement-79
+    radium-chatsan-word-80: radium-chatsan-replacement-80
+    radium-chatsan-word-81: radium-chatsan-replacement-81
+    radium-chatsan-word-82: radium-chatsan-replacement-82
+    radium-chatsan-word-83: radium-chatsan-replacement-83
+    radium-chatsan-word-84: radium-chatsan-replacement-84
+    radium-chatsan-word-85: radium-chatsan-replacement-85
+    radium-chatsan-word-86: radium-chatsan-replacement-86
+    radium-chatsan-word-87: radium-chatsan-replacement-87
+    radium-chatsan-word-88: radium-chatsan-replacement-88
+    radium-chatsan-word-89: radium-chatsan-replacement-89
+    radium-chatsan-word-90: radium-chatsan-replacement-90
+    radium-chatsan-word-91: radium-chatsan-replacement-91
+    radium-chatsan-word-92: radium-chatsan-replacement-92
+    radium-chatsan-word-93: radium-chatsan-replacement-93
+    radium-chatsan-word-94: radium-chatsan-replacement-94
+    radium-chatsan-word-95: radium-chatsan-replacement-95
+    radium-chatsan-word-96: radium-chatsan-replacement-96
+    radium-chatsan-word-97: radium-chatsan-replacement-97
+    radium-chatsan-word-98: radium-chatsan-replacement-98
+    radium-chatsan-word-99: radium-chatsan-replacement-99
+    radium-chatsan-word-100: radium-chatsan-replacement-100
+    radium-chatsan-word-101: radium-chatsan-replacement-101
+    radium-chatsan-word-102: radium-chatsan-replacement-102
+    radium-chatsan-word-103: radium-chatsan-replacement-103
+    radium-chatsan-word-104: radium-chatsan-replacement-104
+    radium-chatsan-word-105: radium-chatsan-replacement-105
+    radium-chatsan-word-106: radium-chatsan-replacement-106
+    radium-chatsan-word-107: radium-chatsan-replacement-107
+    radium-chatsan-word-108: radium-chatsan-replacement-108
+    radium-chatsan-word-109: radium-chatsan-replacement-109
+    radium-chatsan-word-110: radium-chatsan-replacement-110
+    radium-chatsan-word-111: radium-chatsan-replacement-111
+    radium-chatsan-word-112: radium-chatsan-replacement-112
+    radium-chatsan-word-113: radium-chatsan-replacement-113
+    radium-chatsan-word-114: radium-chatsan-replacement-114
+    radium-chatsan-word-115: radium-chatsan-replacement-115
+    radium-chatsan-word-116: radium-chatsan-replacement-116
+    radium-chatsan-word-117: radium-chatsan-replacement-117
+    radium-chatsan-word-118: radium-chatsan-replacement-118
+    radium-chatsan-word-119: radium-chatsan-replacement-119
+    radium-chatsan-word-120: radium-chatsan-replacement-120
+    radium-chatsan-word-121: radium-chatsan-replacement-121
+    radium-chatsan-word-122: radium-chatsan-replacement-122
+    radium-chatsan-word-123: radium-chatsan-replacement-123
+    radium-chatsan-word-124: radium-chatsan-replacement-124
+    radium-chatsan-word-125: radium-chatsan-replacement-125
+    radium-chatsan-word-126: radium-chatsan-replacement-126
+    radium-chatsan-word-127: radium-chatsan-replacement-127
+    radium-chatsan-word-128: radium-chatsan-replacement-128
+    radium-chatsan-word-129: radium-chatsan-replacement-129
+    radium-chatsan-word-130: radium-chatsan-replacement-130
+    radium-chatsan-word-131: radium-chatsan-replacement-131
+    radium-chatsan-word-132: radium-chatsan-replacement-132
+    radium-chatsan-word-133: radium-chatsan-replacement-133
+# Radium end.
 
 - type: accent
   id: liar
